--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-18T18:21:16.401672Z",
-     "iopub.status.busy": "2022-10-18T18:21:16.401382Z",
-     "iopub.status.idle": "2022-10-18T18:21:16.419020Z",
-     "shell.execute_reply": "2022-10-18T18:21:16.418236Z"
+     "iopub.execute_input": "2022-10-18T18:38:05.795852Z",
+     "iopub.status.busy": "2022-10-18T18:38:05.795435Z",
+     "iopub.status.idle": "2022-10-18T18:38:05.815718Z",
+     "shell.execute_reply": "2022-10-18T18:38:05.814913Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-18T18:21:16.423330Z",
-     "iopub.status.busy": "2022-10-18T18:21:16.422814Z",
-     "iopub.status.idle": "2022-10-18T18:21:16.427590Z",
-     "shell.execute_reply": "2022-10-18T18:21:16.426831Z"
+     "iopub.execute_input": "2022-10-18T18:38:05.821000Z",
+     "iopub.status.busy": "2022-10-18T18:38:05.820593Z",
+     "iopub.status.idle": "2022-10-18T18:38:05.825965Z",
+     "shell.execute_reply": "2022-10-18T18:38:05.825216Z"
     }
    },
    "outputs": [
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-18T18:21:16.432036Z",
-     "iopub.status.busy": "2022-10-18T18:21:16.431789Z",
-     "iopub.status.idle": "2022-10-18T18:21:17.122163Z",
-     "shell.execute_reply": "2022-10-18T18:21:17.120862Z"
+     "iopub.execute_input": "2022-10-18T18:38:05.831014Z",
+     "iopub.status.busy": "2022-10-18T18:38:05.830427Z",
+     "iopub.status.idle": "2022-10-18T18:38:08.649536Z",
+     "shell.execute_reply": "2022-10-18T18:38:08.648272Z"
     }
    },
    "outputs": [
@@ -103,8 +103,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python: /lib64/libm.so.6: version `GLIBC_2.29' not found (required by /__t/Python/3.9.14/x64/lib/libpython3.9.so.1.0)\r\n",
-      "python: /lib64/libpthread.so.0: version `GLIBC_2.30' not found (required by /__t/Python/3.9.14/x64/lib/libpython3.9.so.1.0)\r\n"
+      "Traceback (most recent call last):\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 197, in _run_module_as_main\r\n",
+      "    return _run_code(code, main_globals, None,\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 87, in _run_code\r\n",
+      "    exec(code, run_globals)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 217, in <module>\r\n",
+      "    cli(auto_envvar_prefix=\"MI\")\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1130, in __call__\r\n",
+      "    return self.main(*args, **kwargs)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1055, in main\r\n",
+      "    rv = self.invoke(ctx)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1404, in invoke\r\n",
+      "    return ctx.invoke(self.callback, **ctx.params)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 760, in invoke\r\n",
+      "    return __callback(*args, **kwargs)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 168, in cli\r\n",
+      "    repos.extend(GitHubKnowledge().get_repositories(repository=rep.strip()))\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/github_handling.py\", line 92, in _wrapper\r\n",
+      "    return original_funcion(*args, **kwargs)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/github_knowledge.py\", line 57, in get_repositories\r\n",
+      "    repos.append(gh.get_repo(repository).full_name)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/MainClass.py\", line 330, in get_repo\r\n",
+      "    headers, data = self.__requester.requestJsonAndCheck(\"GET\", url)\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/Requester.py\", line 353, in requestJsonAndCheck\r\n",
+      "    return self.__check(\r\n",
+      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/Requester.py\", line 378, in __check\r\n",
+      "    raise self.__createException(status, responseHeaders, output)\r\n",
+      "github.GithubException.UnknownObjectException: 404 {\"message\": \"Not Found\", \"documentation_url\": \"https://docs.github.com/rest\"}\r\n"
      ]
     }
    ],
@@ -144,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
