--- a/01_notebook_executed.ipynb
+++ b/01_notebook_executed.ipynb
@@ -16,10 +16,10 @@
    "id": "60e22449-72ec-41dc-85a8-70a90a1f577e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-18T18:44:27.276569Z",
-     "iopub.status.busy": "2022-10-18T18:44:27.276188Z",
-     "iopub.status.idle": "2022-10-18T18:44:27.298561Z",
-     "shell.execute_reply": "2022-10-18T18:44:27.297580Z"
+     "iopub.execute_input": "2022-10-18T20:29:28.964510Z",
+     "iopub.status.busy": "2022-10-18T20:29:28.964219Z",
+     "iopub.status.idle": "2022-10-18T20:29:28.982007Z",
+     "shell.execute_reply": "2022-10-18T20:29:28.981296Z"
     }
    },
    "outputs": [
@@ -58,10 +58,10 @@
    "id": "5f9cfe48-5a28-4338-bd5e-9a1e2844cd6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-18T18:44:27.304131Z",
-     "iopub.status.busy": "2022-10-18T18:44:27.303859Z",
-     "iopub.status.idle": "2022-10-18T18:44:27.310057Z",
-     "shell.execute_reply": "2022-10-18T18:44:27.309070Z"
+     "iopub.execute_input": "2022-10-18T20:29:28.986471Z",
+     "iopub.status.busy": "2022-10-18T20:29:28.985995Z",
+     "iopub.status.idle": "2022-10-18T20:29:28.990693Z",
+     "shell.execute_reply": "2022-10-18T20:29:28.989944Z"
     }
    },
    "outputs": [
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/\n",
-      "Downloaded file is being stored at oct12/srcopsmetrics/bot_knowledge///PullRequest.json\n"
+      "operate-first/community\n",
+      "Downloaded file is being stored at oct12/srcopsmetrics/bot_knowledge/operate-first/community/PullRequest.json\n"
      ]
     }
    ],
@@ -92,10 +92,10 @@
    "id": "c8794a79-61a1-48b3-9a26-af31086fe622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-18T18:44:27.315502Z",
-     "iopub.status.busy": "2022-10-18T18:44:27.315239Z",
-     "iopub.status.idle": "2022-10-18T18:44:30.949878Z",
-     "shell.execute_reply": "2022-10-18T18:44:30.948585Z"
+     "iopub.execute_input": "2022-10-18T20:29:28.995136Z",
+     "iopub.status.busy": "2022-10-18T20:29:28.994744Z",
+     "iopub.status.idle": "2022-10-18T20:29:29.787399Z",
+     "shell.execute_reply": "2022-10-18T20:29:29.785737Z"
     }
    },
    "outputs": [
@@ -103,34 +103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 197, in _run_module_as_main\r\n",
-      "    return _run_code(code, main_globals, None,\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/runpy.py\", line 87, in _run_code\r\n",
-      "    exec(code, run_globals)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 217, in <module>\r\n",
-      "    cli(auto_envvar_prefix=\"MI\")\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1130, in __call__\r\n",
-      "    return self.main(*args, **kwargs)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1055, in main\r\n",
-      "    rv = self.invoke(ctx)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 1404, in invoke\r\n",
-      "    return ctx.invoke(self.callback, **ctx.params)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/click/core.py\", line 760, in invoke\r\n",
-      "    return __callback(*args, **kwargs)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/cli.py\", line 168, in cli\r\n",
-      "    repos.extend(GitHubKnowledge().get_repositories(repository=rep.strip()))\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/github_handling.py\", line 92, in _wrapper\r\n",
-      "    return original_funcion(*args, **kwargs)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/srcopsmetrics/github_knowledge.py\", line 57, in get_repositories\r\n",
-      "    repos.append(gh.get_repo(repository).full_name)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/MainClass.py\", line 330, in get_repo\r\n",
-      "    headers, data = self.__requester.requestJsonAndCheck(\"GET\", url)\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/Requester.py\", line 353, in requestJsonAndCheck\r\n",
-      "    return self.__check(\r\n",
-      "  File \"/opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages/github/Requester.py\", line 378, in __check\r\n",
-      "    raise self.__createException(status, responseHeaders, output)\r\n",
-      "github.GithubException.UnknownObjectException: 404 {\"message\": \"Not Found\", \"documentation_url\": \"https://docs.github.com/rest\"}\r\n"
+      "python: /lib64/libm.so.6: version `GLIBC_2.29' not found (required by /__t/Python/3.9.14/x64/lib/libpython3.9.so.1.0)\r\n",
+      "python: /lib64/libpthread.so.0: version `GLIBC_2.30' not found (required by /__t/Python/3.9.14/x64/lib/libpython3.9.so.1.0)\r\n"
      ]
     }
    ],
@@ -170,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.14"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
