formatted inference messaging

--- a/04_model_inference.ipynb
+++ b/04_model_inference.ipynb
@@ -28,6 +28,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import re\n",
     "import sys\n",
     "import gzip\n",
     "import json\n",
@@ -97,9 +98,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:github_handling: Github Handler __init__: 4985 remaining api calls\n",
-      "INFO:github_handling: _is_api_exhausted: 4985 remaining api calls\n",
-      "INFO:github_handling: _is_api_exhausted: 4985 remaining api calls\n"
+      "INFO:github_handling: Github Handler __init__: 4982 remaining api calls\n",
+      "INFO:github_handling: _is_api_exhausted: 4982 remaining api calls\n",
+      "INFO:github_handling: _is_api_exhausted: 4982 remaining api calls\n"
      ]
     }
    ],
@@ -117,6 +118,62 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "54f19596-766e-4b5e-ac23-f8da626af6f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_output(input_time):\n",
+    "    \n",
+    "    day1 = ''\n",
+    "    day2 = ''\n",
+    "    splitted = input_time.split(' - ')\n",
+    "    start = splitted[0]\n",
+    "    end = splitted[1]\n",
+    "    \n",
+    "    item1 = start.split(\", \")\n",
+    "    item2 = end.split(\", \")\n",
+    "    \n",
+    "    if len(item1) == 2:\n",
+    "        day1 = start.split(\", \")[0]\n",
+    "        time1 = start.split(\", \")[1]\n",
+    "    else:\n",
+    "        time1 = start.split(\", \")[0]\n",
+    "    \n",
+    "    h1,m1,s1 = re.split(':', time1)\n",
+    "\n",
+    "    if len(item2) == 2:\n",
+    "        day2 = end.split(\", \")[0]\n",
+    "        time2 = end.split(\", \")[1]\n",
+    "    else:\n",
+    "        time2 = end.split(\", \")[0]\n",
+    "    \n",
+    "    h2,m2,s2 = re.split(':', time2)\n",
+    "\n",
+    "    if h1:\n",
+    "        h1 = h1+\" hrs\"\n",
+    "    else:\n",
+    "        h1 = ''\n",
+    "    if h2:\n",
+    "        h2 = h2+\" hrs\"\n",
+    "    else:\n",
+    "        h2 = ''\n",
+    "    if m1:\n",
+    "        m1 = m1+\" mins\"\n",
+    "    else:\n",
+    "        m1 = ''\n",
+    "    if m2:\n",
+    "        m2 = m2+\" mins\"\n",
+    "    else:\n",
+    "        m2 = ''\n",
+    "\n",
+    "    s = \"Our model predicts that it will take between {} {} {} and {} {} {} for this PR to be merged from the time it was opened.\".format(day1,h1,m1,day2,h2,m2)\n",
+    "        \n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "e7cc6d73-9f74-4650-8aba-3e231c402218",
    "metadata": {},
    "outputs": [
@@ -124,15 +181,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:github_handling: _is_api_exhausted: 4983 remaining api calls\n"
+      "INFO:github_handling: _is_api_exhausted: 4980 remaining api calls\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "collected PR jan/srcopsmetrics/bot_knowledge/oindrillac/ner-model-deploy/PullRequest.json/PRs/14.json\n",
-      "This PR is predicted to merge in the time frame ['0:04:00 - 0:09:00'](h:m:s) by our model.\n"
+      "collected PR jan/srcopsmetrics/bot_knowledge/aicoe-aiops/ocp-ci-analysis/PullRequest.json/PRs/622.json\n",
+      "Our model predicts that it will take between  9 hrs 23 mins and  19 hrs 38 mins for this PR to be merged from the time it was opened.\n"
      ]
     }
    ],
@@ -165,12 +222,13 @@
     "\n",
     "    prediction = model.predict(pr_df)\n",
     "    label = labels[labels[\"Class_Label\"] == prediction[0]][\"Class_Name\"].values\n",
-    "\n",
+    "    str_op = time_output(label[0])\n",
+    "    \n",
     "    if ACTION:\n",
     "        pr = repo.get_pull(pr_ids[0].number)\n",
-    "        pr.create_issue_comment(f\"This PR is predicted to merge in the time frame {label}(h:m:s) by our model.\")\n",
+    "        pr.create_issue_comment(str_op)\n",
     "    else:\n",
-    "        print(f\"This PR is predicted to merge in the time frame {label}(h:m:s) by our model.\")\n",
+    "        print(str_op)\n",
     "\n",
     "else:\n",
     "    print(\"No open PRs for running inference\")"
@@ -189,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.6"
   },
   "vscode": {
    "interpreter": {
